test/bad/dictionaries/decl04.px

d: {Int:[String]}
d' = {0: ['x']}
d = d'
